3.1.0 2022xxxx
  BF: Settings: Correction of template synchronization
      If the target file is newer than the template, the template will be updated.
  BF: Platform Create: Correction of settings directory
      Has been moved from \Documents\Settings to \Settings.
  BF: Platform: Compact per Diskpart was not executed
  BF: Platform: Optimization and corrections
  CR: Platform: Optimization / enhancement of function compact
  CR: Platform: Optimization of notification message output 
  CR: Platform: Unification of the namespace
  CR: Platform: Unification of the platform icons
  CR: Platform: Unification of (sub) project structure
  CR: Platform: Optimization of error logging
  CR: Platform: Added Console as default command line prompt
  CR: Platform: Added Launcher as default launcher to keep the environment alive 
  CR: Platform: Added ShiftDown as optional service to shift down the process priority
      The service automatically downgrades the process priority of CPU-intensive processes. 
      For older Intel generations that suffer from the update of Windows and Intel.

3.0.0 20211126
  CR: Platform: Added function shortcuts
      Creates the usual calls as shortcuts.
      e.g. platform.exe B: shortcuts
  CR: Settings: Added for placeholder replacement in files
      This simplifies the personalization , distribution, migrations and updates.

2.0.0 2019xxxx
  NT: Not published

2.0.0 2015xxxx
  NT: Not published
  
1.0.0 20xxxxxx
  NT: Not published