@@ -117,51 +117,56 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+
   <data name="DiskpartAttach" xml:space="preserve">
-    <value>Attachment of the virtual disk</value>
+    <value>Attaching the virtual disk</value>
   </data>
   <data name="DiskpartAttachAssign" xml:space="preserve">
-    <value>Partition #{0} will be used as drive {1}</value>
+    <value>Partition #{0} is used as drive {1}</value>
   </data>
   <data name="DiskpartAttachDetectVolume" xml:space="preserve">
-    <value>Virtual disk will be detected in the volumes</value>
+    <value>Detection of the virtual disk in the volumes</value>
   </data>
   <data name="DiskpartAttachDiskpart" xml:space="preserve">
-    <value>Virtual disk will be attached</value>
+    <value>Assignment as a drive</value>
   </data>
   <data name="DiskpartAttachFailed" xml:space="preserve">
-    <value>Attachment of the virtual disk falied.</value>
+    <value>Attaching the virtual disk falied.</value>
   </data>
+  
   <data name="DiskpartCompact" xml:space="preserve">
     <value>Compaction of the virtual disk</value>
   </data>
   <data name="DiskpartCompactDiskpart" xml:space="preserve">
-    <value>Virtual disk will be compacted</value>
+    <value>Virtual disk and file system are compacted</value>
   </data>
   <data name="DiskpartCompactFailed" xml:space="preserve">
     <value>Compaction of the virtual disk failed.</value>
   </data>
+  
   <data name="DiskpartCreate" xml:space="preserve">
     <value>Creation of the virtual disk</value>
   </data>
   <data name="DiskpartCreateDiskpart" xml:space="preserve">
-    <value>Virtual disk will be created</value>
+    <value>Creating virtual disk</value>
   </data>
   <data name="DiskpartCreateFailed" xml:space="preserve">
     <value>Creation of the virtual disk failed.</value>
   </data>
   <data name="DiskpartCreateInitializationFileSystem" xml:space="preserve">
-    <value>Setup of the initial file system</value>
+    <value>File system are initialized</value>
   </data>
+  
   <data name="DiskpartDetach" xml:space="preserve">
-    <value>Detachment of the virtual disk</value>
+    <value>Detaching the virtual disk</value>
   </data>
   <data name="DiskpartDetachDiskpart" xml:space="preserve">
-    <value>Virtual disk will be detached</value>
+    <value>Unassigning the drive and detaching the virtual disk</value>
   </data>
   <data name="DiskpartDetachFailed" xml:space="preserve">
-    <value>Detachment of the virtual disk failed.</value>
+    <value>Detaching the virtual disk failed.</value>
   </data>
+  
   <data name="DiskpartDriveAlreadyExists" xml:space="preserve">
     <value>Drive already exists</value>
   </data>
@@ -183,60 +188,69 @@
   <data name="DiskpartVolumeNotFound" xml:space="preserve">
     <value>Volume of the virtual disk was not found</value>
   </data>
+  
   <data name="WorkerAttach" xml:space="preserve">
-    <value>The virtual environment will be attached.</value>
+    <value>Attaching the virtual environment</value>
   </data>
   <data name="WorkerAttachBatchFailed" xml:space="preserve">
     <value>Batch execution has failed.</value>
   </data>
   <data name="WorkerAttachFailed" xml:space="preserve">
-    <value>The virtual environment will be attached failed.</value>
+    <value>Attaching the virtual environment failed.</value>
   </data>
   <data name="WorkerAttachText" xml:space="preserve">
-    <value>The virtual environment will be attached.
+    <value>Attaching the virtual environment
 Programs and services are established.</value>
   </data>
+
   <data name="WorkerCompactText" xml:space="preserve">
-    <value>The virtual environment will be compacted.
-Virtual disk and file system are optimized.</value>
+    <value>Compaction of the virtual environment
+Virtual disk and file system are compacted.</value>
   </data>
+  <data name="WorkerCompactCleanFilesytem" xml:space="preserve">
+    <value>Temporary files are cleaned</value>
+  </data> 
+  
   <data name="WorkerCreateText" xml:space="preserve">
-    <value>The virtual environment will be created.
-Virtual disk and file system are established.</value>
+    <value>Creation of the virtual environment
+Virtual disk and file system are initialized.</value>
   </data>
+
   <data name="WorkerDetach" xml:space="preserve">
-    <value>The virtual environment will be detached.</value>
+    <value>Detaching the virtual environment.</value>
   </data>
   <data name="WorkerDetachBatchFailed" xml:space="preserve">
     <value>Batch execution has failed.</value>
   </data>
   <data name="WorkerDetachFailed" xml:space="preserve">
-    <value>The virtual environment will be detached failed.</value>
+    <value>Detaching the virtual environment failed.</value>
   </data>
   <data name="WorkerDetachText" xml:space="preserve">
-    <value>The virtual environment will be detached.
+    <value>Detaching the virtual environment
 Programs and services are terminated.</value>
   </data>
+  
   <data name="WorkerSuccessfullyCompleted" xml:space="preserve">
     <value>Successfully completed</value>
   </data>
+  
   <data name="WorkerUnexpectedErrorOccurred" xml:space="preserve">
     <value>An unexpected error has occurred.</value>
   </data>
+  
   <data name="WorkerUsage" xml:space="preserve">
     <value>{0} A-Z: [create|attach|detach|...]</value>
   </data>
+  
   <data name="WorkerVersion" xml:space="preserve">
     <value>Seanox Virtual Environment [3.1.0 20211130]</value>
   </data>
+
   <data name="WorkerShortcuts" xml:space="preserve">
-    <value>Shortcuts will be created.</value>
+    <value>Creation of shortcuts</value>
   </data>
   <data name="WorkerShortcutsText" xml:space="preserve">
-    <value>Shortcuts will be created.
-The usual usage are established.</value>
-  </data>
-  <data name="WorkerCompactCleanFilesytem" xml:space="preserve">
-    <value>Temporary files will be cleaned</value>
+    <value>Creation of the shortcuts
+The usual functions are initialized.</value>
   </data>
 </root>
