@@ -5,6 +5,7 @@
       Has been moved from \Documents\Settings to \Settings.
   BF: Platform: Compact per Diskpart was not executed
   BF: Platform: Optimization and corrections
+  BF: Platform: Optimization and corrections of the texts
   CR: Platform: Optimization / enhancement of function compact
   CR: Platform: Optimization of notification message output 
   CR: Platform: Unification of the namespace
